# pytorch-pipelines-and-model-training

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/: weights.pth
notebooks/: experiments.ipynb
src/: dataset.py  evaluate.py  model.py  settings.py  train.py
