[project]
name = "pytorch-pipelines-and-model-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
]
